--- a/source/0.4f/src/main/webapp/templates/template-footer.xhtml
+++ b/source/0.4f/src/main/webapp/templates/template-footer.xhtml
@@ -16,10 +16,7 @@
 
 <div id="footer" class="footer w3-container w3-bar w3-teal w3-card">
   <div>
-    <a href="index.xhtml"><h2>myRX</h2></a>
-  </div>
-  <div>
-    <a href="test.xhtml">TEST</a>
+    <a href="index.xhtml"><h:graphicImage url="myRx.png"></a>
   </div>
 </div>
 
