--- a/source/0.4f/src/main/webapp/templates/template-footer.xhtml
+++ b/source/0.4f/src/main/webapp/templates/template-footer.xhtml
@@ -16,7 +16,7 @@
 
 <div id="footer" class="footer w3-container w3-bar w3-teal w3-card">
   <div>
-    <a href="index.xhtml"><h:graphicImage url="myRx.png"></a>
+    <a href="index.xhtml"><button class="w3-button w3-teal w3-round-xxlarge">myRx</button></a>
   </div>
 </div>
 
