--- a/source/0.4f/src/main/webapp/templates/template-main.xhtml
+++ b/source/0.4f/src/main/webapp/templates/template-main.xhtml
@@ -11,6 +11,8 @@
 </h:head>
 <h:body>
 
+<div class="w3-display-container">
+
 <ui:insert name="header">
   <ui:include src="/templates/template-header.xhtml"></ui:include>
 </ui:insert>
@@ -22,6 +24,8 @@
 <ui:insert name="footer">
   <ui:include src="/templates/template-footer.xhtml"></ui:include>
 </ui:insert>
+
+</div>
 
 </h:body>
 </html>
