--- a/source/0.4f/src/main/webapp/templates/template-header.xhtml
+++ b/source/0.4f/src/main/webapp/templates/template-header.xhtml
@@ -16,7 +16,7 @@
 <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card">
   <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third">
   </div>
-  <div class="w3-conatiner w3-cell w3-mobile w3-content w3-margin w3-third">
+  <div class="w3-conatiner w3-cell w3-mobile w3-display-middle w3-margin w3-third">
     <a href="index.xhtml">
       <h:graphicImage url="myRx.png"/>
     </a>
