--- a/source/0.4f/src/main/webapp/templates/template-header.xhtml
+++ b/source/0.4f/src/main/webapp/templates/template-header.xhtml
@@ -16,12 +16,12 @@
 <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card">
   <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third">
   </div>
-  <div class="w3-display-container w3-cell w3-mobile w3-margin w3-third"><div class="w3-display-middle">
+  <div class="w3-container w3-cell w3-mobile w3-margin w3-third">
     <a href="index.xhtml">
       <h:graphicImage url="myRx.png"/>
     </a>
     <h2>Online Medication List</h2>
-    </div></div>
+    </div>
   <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third">
   </div>
 </div>
